fix #861: Unable open zipfs for signed exe file